--- a/conf/config.json
+++ b/conf/config.json
@@ -1,8 +1,6 @@
 {
-    "num_processes": 3,
-    "_comment_num_processes": "not yet used",
     "mode": "server",
-    "_comment_mode": "server or library",
+    "_comment_mode": "server or library (if library, embeddings stay on GPU)",
     "pipeline": {
         "taggers": [
             "ner-ontonotes-fast",
@@ -12,6 +10,10 @@
         "classifiers": [
             "en-sentiment"
         ],
-        "word_embeddings": []
+        "word_embeddings": [
+            "news-forward-fast",
+            "news-backward-fast"
+        ],
+        "embedding_type": "document"
     }
 }
